# steam-vr-wheel

./: .gitignore  README.md  mypy.ini  pyproject.toml
steam_vr_wheel/: controller_mapping.py  processor.py  run_mapping.py  wheel.py
steam_vr_wheel/_oldversion/: _joystick.py  _single_controller.py  _virtualpad.py  _wheel.py  single_controller.py  vrcontroller.py
steam_vr_wheel/mappings/: multiton.py  standard_controller.py  test_mapping.py  throttle_mapping.py  wheel_mapping.py
steam_vr_wheel/mappings/nodes/: axis.py  axis_helpers.py  button.py  button_helpers.py  event_triggers.py  flick_button.py  types.py  value_generator.py  vr_system_state.py  wheel.py
steam_vr_wheel/mappings/nodes/composite/: axis.py  button.py
steam_vr_wheel/mappings/nodes/emitter/: axis.py  button.py
steam_vr_wheel/pyvjoy/: README  _sdk.py
vr_to_joystick/: controller_mapping.py  multithread_processor.py  processor.py  serial_processor.py
vr_to_joystick/mappings/: multiton.py  standard_controller.py  test_mapping.py  throttle_mapping.py  wheel_mapping.py
vr_to_joystick/mappings/nodes/: axis.py  axis_helpers.py  event_triggers.py  value_generator.py  vr_system_state.py  wheel.py
vr_to_joystick/mappings/nodes/composite/: axis.py
vr_to_joystick/mappings/nodes/emitter/: button.py
vr_to_joystick/nodes/: axis.py  axis_helpers.py  button.py  button_helpers.py  event_triggers.py  flick_button.py  multiton.py  types.py  value_generator.py  vr_system_state.py  wheel.py
vr_to_joystick/nodes/composite/: axis.py  button.py
vr_to_joystick/nodes/emitter/: axis.py  button.py
